# scalargrad

./: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  QUICK_START.md  README.md  build.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: basic_operations.py  neural_network.py
scalargrad/: __init__.py  __main__.py  config.py  core.py  loss.py  training.py  visualization.py
scalargrad/nn/: __init__.py  layer.py  layers.py  mlp.py  module.py  neuron.py
scalargrad/optim/: __init__.py  adam.py  optimizer.py  optimizers.py  sgd.py
tests/: __init__.py  test_core.py  test_loss.py  test_nn.py  test_optim.py
