[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scalargrad"
version = "1.0.0"
description = "A production-grade scalar-valued autograd engine for automatic differentiation"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Production Engineering Team", email = "your.email@example.com"}
]
keywords = ["autograd", "automatic differentiation", "neural networks", "deep learning", "machine learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
viz = ["graphviz>=0.19"]
plot = ["matplotlib>=3.3.0", "numpy>=1.19.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
    "scikit-learn>=0.24.0",
]
all = ["graphviz>=0.19", "matplotlib>=3.3.0", "numpy>=1.19.0"]

[project.urls]
Homepage = "https://github.com/yourusername/scalargrad"
Documentation = "https://github.com/yourusername/scalargrad#readme"
Repository = "https://github.com/yourusername/scalargrad"
"Bug Tracker" = "https://github.com/yourusername/scalargrad/issues"

[tool.setuptools]
packages = ["scalargrad", "scalargrad.nn", "scalargrad.optim"]

[tool.setuptools.package-data]
scalargrad = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=scalargrad --cov-report=html --cov-report=term"
